syntax = "proto3";

import "common.proto";

package pb;

service ServerWorker {
    rpc Check(HealthCheckReq) returns (HealthCheckRes);
    rpc SaveMachine (SaveMachineReq) returns (SaveMachineRes);
}

message Port {
    uint32 port = 1;
    string service = 2;
}

message Address {
    string ip = 1;
    repeated Port ports = 2;
}

message Iface {
    string name = 1;
    repeated Address address = 2;
    string error = 3;
}

message Machine {
    string uuid = 1;
    repeated Iface ifaces = 2;
    string error = 3;
}

message SaveMachineReq {
    Machine machine = 1;
}

message SaveMachineRes {
    enum RequestStatus {
        UNKNOWN = 0;
        ACCEPTED = 1;
        NOT_ACCEPTED = 2;
    }
    RequestStatus status = 1;
}
